# Barbershop

./: .env.example  .gitignore  PYTHON412 HW №45.md  Quantum_Razor_barbershop.txt  README.md  arguments.txt  data.json  data1.json  db.sqlite3  db1111.sqlite3  manage.py  pyproject.toml  requirements.txt
Quantum_Razor_barbershop/: asgi.py  settings.py  urls.py  wsgi.py
Users/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
Users/migrations/: 0001_initial.py  0002_user_github_id.py  0002_user_phone.py
Users/templates/users/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  register.html
core/: admin.py  apps.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_master_first_name_idx_order_order_client_name_idx_and_more.py  0002_master_view_count.py
core/templates/core/: landing.html  master_detail.html  order_detail.html  order_form.html  orders_list.html  review_form.html  service_create.html  service_update.html  services_list.html  thanks.html
core/templates/core/includes/: masters_cards_include.html  order_card_include.html  reviews_cards_include.html
static/CSS/: quantum_style.css
static/JS/: order_form.js  quantum_countdown.js  quantum_effects.js  reviews.js
templates/: base.html  landing.html
templates/includes/: nav_menu_include.html
templates/users/: login.html  register.html
